# learn_shiny

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
src/learn_shiny/: __init__.py
src/learn_shiny/dashboard/: app.py  shared.py  styles.css
src/test_polars_shinylive/: app.py  app.spec  launcher.py  shared.py
