[project]
name = "learn-shiny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "David Taylor", email = "davidgt93@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "faicons>=0.2.2",
    "plotly>=6.5.2",
    "polars>=1.38.0",
    "pyarrow>=19.0.0",
    "seaborn>=0.13.2",
    "shiny>=1.5.1",
    "shinyswatch>=0.9.0",
    "shinywidgets>=0.7.1",
]


[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
    "types-seaborn>=0.13.2.20251221",
]

[tool.ruff]
line-length = 80
[tool.ruff.lint]
select = ["I"]
