[project]
name = "learn-shiny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "David Taylor", email = "davidgt93@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "faicons>=0.2.2",
    "plotly>=6.5.2",
    "polars==1.18.0",        # The version of polars included in Pyodide 0.27
    "pyarrow>=19.0.0",
    "pywebview>=5.0",
    "seaborn>=0.13.2",
    "shiny>=1.5.1",
    "shinylive>=0.8.5,<0.9", # Pin to 0.8.x - uses Pyodide 0.27 which has Polars
    "shinyswatch>=0.9.0",
    "shinywidgets>=0.7.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyinstaller>=6.0.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
    "types-seaborn>=0.13.2.20251221",
]

[tool.ruff]
line-length = 80

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true
